--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "node-fetch": "^2.7.0",
+    "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "yahoo-finance2": "^2.13.3"
   },
