--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "stocks:manage": "node scripts/manage-stock-activities.js"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
