--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
+    "@upstash/redis": "^1.35.1",
+    "@vercel/edge-config": "^1.4.0",
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.6.0",
+    "dotenv": "^16.6.1",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "node-fetch": "^2.7.0",
